src/App.css
.App {
    text-align: center;
    overflow: hidden;
    position: fixed;
}

body, html {
    color: #282c34;
    background-color: #ededed;
    overflow: hidden;
}

/* dark mode */
@media (prefers-color-scheme: dark) {
    body, html {
        color: #ededed;
        background-color: #ffffff;
    }
}

